# qwop-gym-leaner

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  justfile  pyproject.toml  qwop-gym.py  replay_recording.py  requirements.txt  test_agent_sim.py
.githooks/: pre-commit  prepare-commit-msg
doc/: env.md  game.md
examples/: train_qwop_dqn.py  train_qwop_ppo.py
qwop_gym/envs/v1/: qwop_env.py
qwop_gym/envs/v1/game/: QWOP.min.js  extensions.js  ws.js
qwop_gym/envs/v1/util/: wsserver.py
qwop_gym/tools/: bootstrap.py  common.py  main.py
qwop_gym/tools/templates/: benchmark.yml  play.yml  record.yml  replay.yml  spectate.yml  spectate_record.yml  train_a2c.yml  train_airl.yml  train_bc.yml  train_dqn.yml  train_gail.yml  train_ppo.yml  train_qrdqn.yml  train_rppo.yml
qwop_gym/wrappers/: record_wrapper.py
qwop_gym_leaner/: __init__.py
qwop_gym_leaner/envs/v1/: qwop_env.py
qwop_gym_leaner/envs/v1/game/: QWOP.html  QWOP.min.js  QWOP.min.orig.js  extensions.js  seedrandom.js  ws.js
qwop_gym_leaner/envs/v1/game/assets/: howler.js
qwop_gym_leaner/envs/v1/util/: log.py  wsclient.py  wsproto.py  wsserver.py
qwop_gym_leaner/tools/: benchmark.py  bootstrap.py  common.py  main.py  patch.py
qwop_gym_leaner/wrappers/: absorb_wrapper.py  record_wrapper.py  verbose_wrapper.py
scripts/: replay_recording.py
