[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qwop-gym-leaner"
version = "1.1.0"
authors = [
    { name="Simeon Manolov", email="s.manolloff@gmail.com" },
    { name="Emanuele Ballarin", email="emanuele@ballarin.cc" },
]

description = "A Gymnasium environment for Benett Foddy's game QWOP, made leaner!"
readme = "README.md"
license = {text = "Apache License v2.0"}
requires-python = ">=3.11"
keywords = [
    "gym",
    "gymnasium",
    "Reinforcement Learning",
    "AI",
    "game",
    "QWOP",
    "Farama-Foundation"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium >= 0.29.1",
    "websockets >= 15.0",
    "numpy >= 1.24.3",
    "selenium >= 4.11.2",
    "pyyaml >= 6.0",
]

[project.urls]
"Homepage" = "https://github.com/emaballarin/qwop-gym-leaner"
"Bug Tracker" = "https://github.com/emaballarin/qwop-gym-leaner/issues"

[project.scripts]
"qwop-gym-leaner" = "qwop_gym.tools.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qwop_gym*"]
