[build-system]
    build-backend = "setuptools.build_meta"
    requires = ["setuptools>=61.0"]

[project]
    authors = [
        { name = "Emanuele Ballarin", email = "emanuele@ballarin.cc" },
        { name = "Simeon Manolov", email = "s.manolloff@gmail.com" },
    ]
    name = "qwop-gym-leaner"
    version = "1.0.2"

    classifiers = [
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: JavaScript",
        "Programming Language :: Python :: 3",
        "Topic :: Education",
        "Topic :: Games/Entertainment",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
    ]
    dependencies = [
        "gymnasium >= 1.2.3",
        "numpy >= 2",
        "pyyaml >= 6",
        "selenium >= 4.12",
        "websockets >= 15",
    ]
    description = "A Gymnasium environment for Benett Foddy's game QWOP, made leaner!"
    keywords = [
        "AI",
        "Farama-Foundation",
        "QWOP",
        "Reinforcement Learning",
        "game",
        "gym",
        "gymnasium",
    ]
    license = { text = "Apache License v2.0" }
    readme = "README.md"
    requires-python = ">=3.11"

[project.urls]
    "Bug Tracker" = "https://github.com/emaballarin/qwop-gym-leaner/issues"
    "Homepage" = "https://github.com/emaballarin/qwop-gym-leaner"

[tool.setuptools.packages.find]
    include = ["qwop_gym_leaner*"]
    where = ["."]
